流れるような鍵盤操作ができるように修正（ベータ）

--- a/src/main/resources/org/urakeyboard/layout/KeyboardMain.xml
+++ b/src/main/resources/org/urakeyboard/layout/KeyboardMain.xml
@@ -17,6 +17,14 @@
     />
     <HBox id="KeyArea">
       <children>
+        <Rectangle fx:id="pitchBand"
+           y="0"
+           arcWidth="5.0"
+           arcHeight="5.0"
+           width="100.0"
+           height="350."
+           styleClass="blackKey"
+         />
       </children>
     </HBox>
   </children>
