--- a/src/main/resources/org/urakeyboard/layout/KeyboardMain.css
+++ b/src/main/resources/org/urakeyboard/layout/KeyboardMain.css
@@ -34,7 +34,7 @@
     -fx-fill: linear-gradient(from 0% 0% to 0% 100%, white, white 98%, dimgray 98.5%, white 99%, black 100%);
 }
 
-.pitchBand {
+.pitchBend {
     -fx-stroke: linear-gradient(from 100% 100% to 0% 0%, #afbdc0, #6d7673 50%, #0a0f0b 51%, #0a0809 100%);
     -fx-stroke-width: 3px;
     -fx-stroke-line-cap: butt;
