--- a/src/main/resources/org/urakeyboard/layout/KeyboardMain.xml
+++ b/src/main/resources/org/urakeyboard/layout/KeyboardMain.xml
@@ -3,6 +3,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.shape.Rectangle?>
 
 <fx:root
@@ -11,24 +13,26 @@
   style="-fx-background-color: #ccc;"
   xmlns:fx="http://javafx.com/fxml">
   <children>
-    <Label id="commentabel"
-      text="HELLO! JavaFX MIDI Keyboard EMULATOR"
-      prefWidth="1240.0"
-    />
+    <HBox id="ControllArea">
+      <children>
+        <Label id="SynthesizerLabel" styleClass="comLabel" text="出力:" />
+        <ComboBox id="SynthesizerSelect"></ComboBox>
+        <Label id="SequencerLabel" styleClass="comLabel" text="入力:" />
+        <ComboBox id="SequencerSelect"></ComboBox>
+        <Button id="deviceButton">デバイス設定</Button>
+        <Button id="keySetButton">キー設定</Button>
+        <Label id="commentabel" styleClass="titleLabel"
+          text="U-BOARD 1"
+          prefWidth="1125.0"
+        />
+      </children>
+    </HBox>
     <HBox id="KeyArea">
       <children>
         <VBox id="optionArea"
           style="-fx-alignment:center;"
         >
-          <children><!--
-            <Rectangle id="pitchBend"
-               y="0"
-               arcWidth="5.0"
-               arcHeight="5.0"
-               width="250.0"
-               height="200.0"
-               styleClass="pitchBend"
-             /> -->
+          <children>
           </children>
         </VBox>
       </children>
