--- a/src/main/resources/org/urakeyboard/layout/ProgramItem.xml
+++ b/src/main/resources/org/urakeyboard/layout/ProgramItem.xml
@@ -9,7 +9,7 @@
   style="-fx-background-color: #ccc;"
   xmlns:fx="http://javafx.com/fxml">
   <children>
-    <Label styleClass="comLabel" text=" " />
+    <Label fx:id="chanelListLabel" styleClass="comLabel" text=" " />
     <Label fx:id="chanelNumLabel" styleClass="comLabel" text="Chanel 1:" />
     <ComboBox fx:id="programSelect" onAction="#programSelectAction"></ComboBox>
     <Spinner fx:id="programSpinner" maxWidth="75.0" min="1" max="127" initialValue="1" amountToStepBy="1" editable="true" />
